# riscv_mini_os

./: .gitignore  CMakeLists.txt  LICENSE  README.md  riscv_mini_os.code-workspace
docs/: 00_immediate.s  01_loop_while.s  02_loop_for.s  03_functions_00.s  03_functions_01.s  04_callstack.s  05_recursive.s  06_directives.s  07_ecall.s  08_sbrk.s  09_sbrk_01.s  10_malloc.s  11_hello.s  rv32i.md
docs/linkers_old/: hello.ld  linker.ld  mem_cfg.ld
irq/: CMakeLists.txt  interrupts.s
kernel/: CMakeLists.txt  README.md  kernel.c  linker.ld
samples/app0/: CMakeLists.txt  README.md  app01.s  mem_cfg.ld
samples/app1/: CMakeLists.txt  Makefile  README.md  baremetal.ld  hello.c  start.s
samples/baremetal/: CMakeLists.txt  boot.s  driver_uart.c  kernel.s  linker.ld  main.c  traps.s
samples/driver/: CMakeLists.txt  interrupts.s
samples/hello/: CMakeLists.txt  README.md  hello.s
samples/kernel/: README.md  entry.s  kernel.c  riscv64-virt.ld
simples/: CMakeLists.txt  app01.s
toolchains/: riscv.toolchain.cmake  riscv32.cmake  riscv64.cmake
